# CPPFactoryAndConfigure

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/include/: Application.h  Ethernet.h  Factory.h  IBuilder.h  JSSONBuilder.h  Serial.h  Transport.h  TrasnsportType.h
app/src/: Application.cpp  Ethernet.cpp  Factory.cpp  JSSONBuilder.cpp  Serial.cpp  Transport.cpp  TrasnsportType.cpp
data/: serial.json  udp.json
